k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ihub
  labels:
    app.kubernetes.io/name: ihub
    app.kubernetes.io/part-of: ihub
